--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -5,9 +5,9 @@ socket = 0.0.0.0:8082
 # 使用uwsgi配置
 ;http = 0.0.0.0:8081
 # 项目目录
-chdir = /home/ivy/project/fresh
+chdir =
 #wsgi.py文件的目录，相对根目录
-wsgi-file = fresh/wsgi.py
+wsgi-file =
 # 指定工作进程中的进程数
 processes = 4
 # 指定工作进程中的线程数
@@ -19,6 +19,6 @@ pidfile=uwsgi.pid
 # 设置uwsgi后台运行，uwsgi.log保存日志信息
 daemonize=uwsgi.log
 # 设置虚拟环境的路径
-virtualenv=/root/.virtualenvs/fresh
+virtualenv=
 # 代码更改后自动重启服务
 py-autoreload=1
